Background color for admonitions.

--- a/css/admonitions.css
+++ b/css/admonitions.css
@@ -5,6 +5,7 @@
   border: 1px solid #eee;
   border-left-width: 5px;
   border-radius: 3px;
+  background-color: #fCfCfc;
 }
 .admonition .admonition-title {
   margin-top: 0;
